test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-borrowed.chpl
//  lhs: shared?  rhs: borrowed?  error: mm

class MyClass {  var x: int;  }

var rhs: borrowed MyClass?;

record MyRecord {
  var lhs: shared MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
