test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-borrowed.good
init-field-dflt-oknil-shared-from-oknil-borrowed.chpl:8: error: Cannot initialize 'lhs' of type shared MyClass? from a 'borrowed MyClass?'
